[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/projectileCreator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Enemies/Bosses/sphereBoss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Characters/BossSpheres.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Enemies/Projectiles/smallFastProjectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/SFX/Enemy/enemyShot.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 18 )

[node name="sphereBoss" type="Area2D" groups=["enemy"]]
z_index = -1
script = ExtResource( 2 )
introType = 2
health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteAnchor" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
position = Vector2( 0, 16 )
texture = ExtResource( 3 )
offset = Vector2( 0, -16 )

[node name="Tween" type="Tween" parent="."]

[node name="projectileCreator" type="Position2D" parent="."]
position = Vector2( -10, 0 )
script = ExtResource( 1 )
projectileReferences = [ ExtResource( 4 ) ]
audioReferences = [ ExtResource( 5 ) ]

[node name="bossTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="startAction"]
